<resources>
    <string name="app_name">Zephyr_Task_2</string>
    <string name="order_by">Order By :</string>
    <string name="search">Search</string>
    <string name="book_name">Book Name:</string>
    <string name="the_left_hand_of_darkness">The Left Hand Of Darkness</string>
    <string name="author">Author:</string>
    <string name="category">Category:</string>
    <string name="publish_date">Publish date:</string>
    <string name="number_of_pages">Number of pages:</string>
    <string name="prajata_samanta">Prajata Samanta</string>
    <string name="from">from</string>
    <string name="error">error</string>
    <string name="no_data">no data</string>

    <string-array name="orders">
        <item>Book Name</item>
        <item>Author</item>
        <item>Category</item>
        <item>Publish Date</item>
        <item>Page Count</item>
    </string-array>
</resources>