<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:title="Book Details"
        app:titleTextColor="@color/white"
        android:background="@color/colorPrimaryDark"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/book_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="25dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/book_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_left_hand_of_darkness"
                    android:textSize="28sp"
                    android:gravity="center"
                    android:paddingHorizontal="25dp"
                    android:textColor="@color/black"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/author_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:id="@+id/author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:paddingVertical="10dp"
                    android:paddingHorizontal="8dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginHorizontal="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/category_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:id="@+id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginHorizontal="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/publish_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish_date"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:id="@+id/publish_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginHorizontal="20dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/page_count_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_pages"
                    android:textSize="25sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:layout_marginStart="25dp"/>

                <TextView
                    android:id="@+id/page_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:background="@drawable/background_rectangle"
                    android:layout_marginHorizontal="20dp"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>