<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        app:titleTextColor="@color/white"
        app:title="Zephyr Task 2"
        android:background="@color/colorPrimaryDark"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:theme="@style/AppTheme.Toolbar"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/orderByLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:elevation="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/order_by"
                        android:gravity="center_vertical"
                        android:layout_marginStart="25dp"
                        android:textColor="@color/light_black"
                        android:textSize="17sp"
                        tools:ignore="RelativeOverlap" />

                    <Spinner
                        android:id="@+id/order"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="50dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentEnd="true"
                        android:entries="@array/orders"
                        tools:ignore="RtlSymmetry" />

                </RelativeLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"/>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey">

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:shimmer_repeat_mode="restart"
                    android:background="@color/grey"
                    android:paddingTop="8dp"
                    app:shimmer_shape="radial">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <include layout="@layout/layout_shimmer" />
                        <include layout="@layout/layout_shimmer" />
                        <include layout="@layout/layout_shimmer" />
                        <include layout="@layout/layout_shimmer" />
                        <include layout="@layout/layout_shimmer" />
                        <include layout="@layout/layout_shimmer" />
                        <include layout="@layout/layout_shimmer" />
                        <include layout="@layout/layout_shimmer" />
                        <include layout="@layout/layout_shimmer" />
                        <include layout="@layout/layout_shimmer" />

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingTop="8dp"
                    android:overScrollMode="never"
                    android:descendantFocusability="blocksDescendants"
                    app:reverseLayout="false"/>

                <ImageView
                    android:id="@+id/error"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_marginTop="300dp"
                    android:layout_centerInParent="true"
                    android:layout_height="250dp"
                    android:contentDescription="@string/error" />

                <ImageView
                    android:id="@+id/no_data"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_marginTop="300dp"
                    android:layout_centerInParent="true"
                    android:layout_height="250dp"
                    android:contentDescription="@string/no_data" />

            </RelativeLayout>

        </LinearLayout>
        
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>